fixing feature box shift

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -2280,12 +2280,12 @@ figcaption {
     display: grid;
     margin: 0 auto;
     gap: 1em;
-    min-width: 40vw;
+    min-width: 10vw;
     width: 90%;
     max-width: 90vw;
     height: auto;
+    min-height: 2vh;
   }
-
 
   .feature-box-text a p {
     font-size: 2.5vw;
@@ -2298,22 +2298,21 @@ figcaption {
     width: 100%;
     max-width: 100vw;
     height: auto;
+    min-height: 1vh;
   }
 
   .feature-box img {
     width: 100%;
     height: auto;
-    min-height: 2vh;
     aspect-ratio: 5 / 4;
   }
 
   .feature-box-text p {
     font-size: 2vw;
+    width: 100%;
     height: auto;
-    min-height: 1vh;
     padding: 0.5vw;
   }
-
 
   .categories-title,
   .feature-title {
@@ -2685,9 +2684,7 @@ figcaption {
   .category-box-text,
   .feature-box-text {
     width: 100%;
-    max-width: 100vw;
     height: auto;
-    min-height: 1vh;
   }
 
   .category-box-text a h3,
@@ -2695,6 +2692,7 @@ figcaption {
     font-size: 3.5vw;
     width: 100%;
     height: auto;
+    min-height: 1vh;
     padding: 1vw 0.5vw 0.5vw;
   }
 
@@ -2704,6 +2702,7 @@ figcaption {
     max-width: 100vw;
     font-size: 3.2vw;
     height: auto;
+    min-height: 1vh;
     padding: 0.5vw;
   }
 
